# STDAS

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.node.json
.cargo/: config.toml
apps/api/: README.md
apps/web/: package.json
backend/services/stdas-gateway/: CHANGELOG.md  Cargo.toml  README.md
backend/services/stdas-gateway/migrations/: 20260607000100_identity_mes_aligned_auth.sql
backend/services/stdas-gateway/src/: lib.rs  main.rs  server.rs  state.rs
backend/services/stdas-gateway/src/audit/: mod.rs
backend/services/stdas-gateway/src/config/: settings.rs
backend/services/stdas-gateway/src/db/: mod.rs
backend/services/stdas-gateway/src/middleware/: cors.rs
backend/services/stdas-gateway/src/modules/: mod.rs
backend/services/stdas-gateway/src/modules/analytics/: mod.rs
backend/services/stdas-gateway/src/modules/customer/: mod.rs
backend/services/stdas-gateway/src/modules/data_pipeline/: dto.rs  handlers.rs  mod.rs  routes.rs  service.rs
backend/services/stdas-gateway/src/modules/evidence/: mod.rs
backend/services/stdas-gateway/src/modules/identity/: dto.rs  handlers.rs  mod.rs  models.rs  routes.rs  service.rs
backend/services/stdas-gateway/src/modules/integration/: mod.rs
backend/services/stdas-gateway/src/modules/workflow/: mod.rs
backend/services/stdas-gateway/src/routes/: api_v1.rs  mod.rs
backend/services/stdas-gateway/src/shared/: api.rs  mod.rs
backend/services/stdas-gateway/src/system/: dto.rs  handlers.rs  mod.rs  routes.rs  service.rs
backend/services/stdas-gateway/src/telemetry/: mod.rs
backend/services/stdas-gateway/tests/: requests.rs
backend/services/stdas-gateway/tests/requests/: data_pipeline.rs  identity.rs  system.rs
crates/services/stdas-gateway/: Cargo.toml
crates/services/stdas-gateway/config/: development.yaml  production.yaml  test.yaml
crates/services/stdas-gateway/src/: app.rs  lib.rs  main.rs  state.rs
crates/services/stdas-gateway/src/controllers/: system.rs
crates/services/stdas-gateway/src/dto/: response.rs
crates/services/stdas-gateway/src/errors/: mod.rs
crates/services/stdas-gateway/src/models/: mod.rs  system.rs
crates/services/stdas-gateway/src/repositories/: mod.rs
crates/services/stdas-gateway/src/routes/: api_v1.rs
crates/services/stdas-gateway/src/utils/: mod.rs
crates/services/stdas-gateway/tests/: requests.rs
crates/services/stdas-gateway/tests/requests/: system.rs
docs/: README.md  project-structure.md
docs/architecture-design/: README.md  ai-agent-runtime-rules.md  ai-code-generation-governance.md  architecture-diagram.drawio  architecture-overview.html  architecture-review.md  domain-model.md  feature-slices-v1.md  (+5 more)
src/: main.tsx
(+92 files in other folders)
