[package]
name = "stdas-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
axum = "0.8.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.11", features = ["cors"] }

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
